# socialhive-marketplace

./: .gitignore  Dockerfile  LICENSE  README.md  async_run.py  docker-compose.yml  main.py  pyproject.toml  requirements.txt
config/: __init__.py  asgi.py  service_settings.py
src/marketplace/: urls.py
src/marketplace/application/: messagebus.py  products.py
src/marketplace/domain/: events.py  interfaces.py  models.py
src/marketplace/infrastructure/adapters/: db.py  repository.py  unit_of_work.py
src/marketplace/infrastructure/api/: views.py
